--- a/vignettes/vancomycin_interval_adaptation.Rmd
+++ b/vignettes/vancomycin_interval_adaptation.Rmd
@@ -34,7 +34,7 @@ in dose 1 and 3.
 # end_of_fourth_infusion <- (4-1) * 12 + 2 # first dose at t=0, infusion is 2 hrs
 # tdm_times1 <- c(1, 9) + end_of_fourth_infusion
 # tdm_times2 <- 5 + end_of_fourth_infusion
-tdm_scheme1 <- create_sampling_design(
+tdm_design1 <- create_sampling_design(
   time = c(1, -1, 1, -1), # sample 1-hour before next dose
   offset_from = c("peak", "trough", "peak", "trough"),
   anchor = c(1, 1, 3, 3),
@@ -46,7 +46,7 @@ We assume that we can update the dose amount or dosing interval
 at dose 3 and 5 and aim for an AUC24 of 400-600 mg*h/L by day 6.
 
 ```{r}
-target <- create_target_design(
+target_design <- create_target_design(
   targettype = "auc24", 
   targetmin = 400,
   targetmax = 600,
@@ -55,7 +55,7 @@ target <- create_target_design(
   anchor = 6,
   anchor_by = "day"
 )
-dose_update_scheme <- create_regimen_update_design(
+dose_update_design <- create_regimen_update_design(
   anchor = c(3, 5),
   anchor_by = "dose",
   update_type = "dose"
@@ -149,7 +149,7 @@ for (i in dat$ID) {
   #################################################################################
   # find initial starting dose: define basic regimen, then upda
   initial_reg <- model_based_starting_dose(
-    sampling_design = tdm_scheme1,
+    sampling_design = tdm_design1,
     n = 12,
     interval = 12,
     t_inf = 2,
@@ -162,7 +162,7 @@ for (i in dat$ID) {
     covariates = covs,
     auc_comp = attr(model, "size"),
     # define PK target
-    target = target
+    target = target_design
   )
 
   #################################################################################
@@ -170,7 +170,7 @@ for (i in dat$ID) {
   #################################################################################
   treatment_summary <- sample_and_adjust_by_dose(
     regimen_update_design = dose_update_design, 
-    sampling_design = tdm_scheme1, # arm 1
+    sampling_design = tdm_design1, # arm 1
     regimen = initial_reg,
     covariates = covs,
     pars_true_i = pars_true_i,
@@ -181,7 +181,7 @@ for (i in dat$ID) {
     omega = omega,
     ruv = ruv,
     target_time = auc_time,
-    target = target,
+    target = target_design,
     dose_optimization_method = map_adjust_dose
   )
   
@@ -258,7 +258,7 @@ for (i in dat$ID) {
   # find initial starting dose: define basic regimen, then upda
   initial_reg <- model_based_starting_dose(
     # define dosing strategy
-    sampling_design = tdm_scheme1,
+    sampling_design = tdm_design1,
     n = 30,
     interval = 12,
     t_inf = 2,
@@ -271,7 +271,7 @@ for (i in dat$ID) {
     covariates = covs,
     auc_comp = attr(model, "size"),
     # define PK target
-    target = target
+    target = target_design
   )
 
   #################################################################################
@@ -279,7 +279,8 @@ for (i in dat$ID) {
   #################################################################################
   treatment_summary <- sample_and_adjust_by_dose(
     regimen_update_design = interval_update_design,
-    sampling_design = tdm_scheme1, # arm 1
+    sampling_design = tdm_design1, # arm 1
+    target = target_design,
     regimen = initial_reg,
     covariates = covs,
     pars_true_i = pars_true_i,
@@ -290,7 +291,6 @@ for (i in dat$ID) {
     omega = omega,
     ruv = ruv,
     target_time = auc_time,
-    target = target,
     dose_optimization_method = map_adjust_interval,
     interval_grid = c(6, 8, 12, 16, 24, 36),
     verbose = F
