--- a/vignettes/sample_timing.Rmd
+++ b/vignettes/sample_timing.Rmd
@@ -28,7 +28,7 @@ library(tidyr)
 library(ggplot2) # for plotting our results
 ```
 
-## 1. Define simulation parameters
+## 1. Define trial design
 
 This simulated trial will have two arms: 
 
@@ -42,13 +42,13 @@ infused over 2 hours.
 # end_of_fourth_infusion <- (4-1) * 12 + 2 # first dose at t=0, infusion is 2 hrs
 # tdm_times1 <- c(1, 9) + end_of_fourth_infusion
 # tdm_times2 <- 5 + end_of_fourth_infusion
-tdm_scheme1 <- create_sampling_design(
+tdm_design1 <- create_sampling_design(
   time = c(1, 9),
   offset_from = c("dose", "dose"), 
   anchor = c(4, 4), 
   anchor_by = "dose"
 )
-tdm_scheme2 <- create_sampling_design(
+tdm_design2 <- create_sampling_design(
   time = 5, 
   offset_from = "dose", 
   anchor = 4,
@@ -60,11 +60,11 @@ We will adjust the fifth dose based on these levels, aiming for a daily AUC of
 400-600 mg*h/L by day 6.
 
 ```{r}
-adjust_scheme <- create_regimen_update_design(
+update_design <- create_regimen_update_design(
   anchor = 5,
   anchor_by = "dose"
 )
-target <- create_target_design(
+target_design <- create_target_design(
   targettype = "auc24", 
   targetmin = 400,
   targetmax = 600,
@@ -185,8 +185,8 @@ for (i in dat$ID) {
   )
   # find initial starting dose: define basic regimen, then upda
   initial_reg <- model_based_starting_dose(
-    # define dosing strategy
-    sampling_design = tdm_scheme1,
+    target_design = target_design,
+    sampling_design = tdm_design1,
     n = 12,
     interval = 12,
     t_inf = 2,
@@ -197,10 +197,7 @@ for (i in dat$ID) {
     est_model = model,
     parameters = pop_parameters,
     covariates = covs,
-    auc_comp = attr(model, "size"),
-    # define PK target
-    target_time = auc_time,
-    target = target
+    auc_comp = attr(model, "size")
   )
 
   # randomly draw individual PK parameters
@@ -212,8 +209,9 @@ for (i in dat$ID) {
   
   # Summary of both MIPD approaches
   treatment_summary1 <- sample_and_adjust_by_dose(
-    regimen_update_design = adjust_scheme, 
-    sampling_design = tdm_scheme1, # arm 1
+    regimen_update_design = update_design, 
+    sampling_design = tdm_design1, # arm 1
+    target_design = target_design,
     regimen = initial_reg,
     covariates = covs,
     pars_true_i = pars_true_i,
@@ -223,12 +221,12 @@ for (i in dat$ID) {
     parameters = pop_parameters,
     omega = omega,
     ruv = ruv,
-    target = target,
     dose_optimization_method = map_adjust_dose
   )
   treatment_summary2 <- sample_and_adjust_by_dose(
-    regimen_update_design = adjust_scheme, 
-    sampling_design = tdm_scheme2, # arm 1
+    regimen_update_design = update_design, 
+    sampling_design = tdm_design2, # arm 1
+    target_design = target_design,
     regimen = initial_reg,
     covariates = covs,
     pars_true_i = pars_true_i,
@@ -238,7 +236,6 @@ for (i in dat$ID) {
     parameters = pop_parameters,
     omega = omega,
     ruv = ruv,
-    target = target,
     dose_optimization_method = map_adjust_dose
   )
   
@@ -247,14 +244,14 @@ for (i in dat$ID) {
     regimen = treatment_summary1$final_regimen,
     parameters = pars_true_i, # true patient parameters
     model = model,
-    target = target,
+    target_design = target_design,
     covariates = covs
   )
   results$random[results$id == i] <- calc_auc_from_regimen(
     regimen = treatment_summary2$final_regimen,
     parameters = pars_true_i, # true patient parameters
     model = model,
-    target = target,
+    target_design = target_design,
     covariates = covs
   )
 }
@@ -278,23 +275,22 @@ target_attainment <- results %>%
     names_to = "sampling_design",
     values_to = "steady_state_auc"
   ) %>%
-  mutate(ontarget = is_on_target(steady_state_auc, target)) %>%
+  mutate(ontarget = is_on_target(steady_state_auc, target_design)) %>%
   group_by(sampling_design) %>%
   summarize(prop_on_target = 100 * mean(ontarget))
 
 target_attainment %>%
   ggplot() +
-  aes(x = sampling_design, y = prop_on_target) +
-  geom_bar(stat = "identity") +
-  theme_minimal() +
-  theme(
-    panel.grid.major.x = element_blank()
-  ) +
-  labs(
-    x = "Sampling strategy",
-    y = "Percent on target (%)"
-  )
-
+    aes(x = sampling_design, y = prop_on_target) +
+    geom_bar(stat = "identity") +
+    theme_minimal() +
+    theme(
+      panel.grid.major.x = element_blank()
+    ) +
+    labs(
+      x = "Sampling strategy",
+      y = "Percent on target (%)"
+    )
 ```
 
 Target attainment was high and varied little between the two arms, providing
